Minor code changes to reduce duplicated code and improve readability.